# hil-firmware-verification

./: CMakeLists.txt  HIL_Verification.c  hil_test_report.html  pytest.ini
host/: hil_client.py  requirements.yaml  traceability_matrix.csv
host/tests/: conftest.py  test_protocol.py
host/tools/: gen_traceability.py
